src/test/resources/delivery2/expressions/invalid/semantic/arithmetic/mixingIntAndQuote.pas
program Demo;
var
  x, y, z : integer;
  a : boolean;
begin
    x := 100;
    y := 200;
    a := true;
    z := x * 'hello';
    writeln(z)
end.